--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install smtplib
+        # Ви можете додати інші залежності, якщо потрібно, але не smtplib
 
     - name: Run the script
       run: |
